--- a/style.css
+++ b/style.css
@@ -2,4 +2,51 @@
 
 body{
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 1.125rem;
+    color: #707070;
+    margin: 0;
+}
+
+h1{
+    font-size: 3rem;
+    color: #213614;
+    text-align: center;
+}
+
+h2{
+    font-size: 1.5rem;
+}
+
+img{
+    max-width: 100%;
+}
+
+.container{
+    width: 95%;
+    max-width: 980px;
+    margin: 0 auto;
+}
+
+.columns{
+    display: flex;
+    margin-top: 1em;
+}
+
+.col-bg{
+    background-color: #312614;
+    padding: 1em;
+    color: #fff;
+}
+
+.col-1{
+    width: 25%;
+    
+}
+
+.col-2{
+    width: 50%;
+}
+
+.col-3{
+    width: 75%;
 }
